# owncloud-cd-exp

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  placeholder_script.py
.github/workflows/: cd.yml
gha-client/: webdav-deploy.py
python-client/: main.py  pyproject.toml
